media-keys: Fix battery key handling

Since commit 5bbe63ff22, the power plugin DBus interface doesn't have the
properties that media-keys plugin expects here. So keep an UPower display
device to fetch icon/percentage for the OSD.

https://bugzilla.gnome.org/show_bug.cgi?id=720198